# SynapticOS

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
assets/SynapticOS-logo/: README.txt
boards/nxp/frdm_mcxn947/: frdm_mcxn947_cpu0.conf  frdm_mcxn947_cpu0.overlay  frdm_mcxn947_cpu1.overlay  synaptic_partitions.overlay
boards/nxp/frdm_mcxn947_cpu1/: Kconfig.frdm_mcxn947_cpu1  board.yml  frdm_mcxn947_cpu1_mcxn947_cpu1.dts  frdm_mcxn947_cpu1_mcxn947_cpu1_defconfig
docs/: 01-ubuntu-setup.md  02-project-setup.md  architecture.md
include/synaptic/: syn_api.h  syn_hal_dma.h  syn_hal_dsp.h  syn_hal_npu.h  syn_infer.h  syn_ipc.h  syn_mem.h  syn_model.h  syn_model_ota.h  syn_process.h  syn_prof.h
models/: README.md
samples/dual_model/: CMakeLists.txt  README.md  prj.conf
samples/dual_model/boards/: frdm_mcxn947_mcxn947_cpu0.conf  frdm_mcxn947_mcxn947_cpu0.overlay
samples/dual_model/remote/: CMakeLists.txt  prj.conf
samples/dual_model/remote/src/: main.c
samples/dual_model/src/: main.c
samples/face_detection/: CMakeLists.txt  README.md  prj.conf
samples/face_detection/boards/: qemu_cortex_m3.conf
samples/face_detection/src/: main.c
samples/hello_inference/: CMakeLists.txt  README.md  prj.conf
samples/hello_inference/src/: main.c
samples/keyword_spotting/: CMakeLists.txt  README.md
samples/keyword_spotting/src/: main.c
samples/ota_update/: CMakeLists.txt  README.md  prj.conf
samples/ota_update/boards/: frdm_mcxn947_mcxn947_cpu0.conf  frdm_mcxn947_mcxn947_cpu0.overlay  qemu_cortex_m3.conf
samples/ota_update/src/: main.c
scripts/: setup_env.py  setup_project.py  validate_env.sh
src/core/: syn_boot.c  syn_boot_internal.h  syn_flash_map.h  syn_flash_port.h  syn_flash_port_mcx.c  syn_flash_port_ram.c  syn_infer.c  syn_infer_internal.h  syn_infer_remote.c  syn_infer_remote.h  syn_init.c  syn_ipc.c  syn_ipc_internal.h  syn_ipc_ring.c  syn_ipc_ring.h  syn_mem.c  syn_model.c  syn_model_internal.h  syn_model_ota.c  syn_model_ota_internal.h  syn_model_store.c  syn_model_store.h  syn_mpu.c  syn_mpu_internal.h  syn_prof.c  syn_prof_internal.h  syn_shared_layout.h  syn_shell.c  syn_synm.h
src/hal/common/: syn_dsp_soft.c  syn_dsp_soft.h
src/hal/mcxn947/: syn_hal_dma_sdma.c  syn_hal_dsp_pq.c  syn_hal_npu_neutron.c
src/hal/stub/: syn_hal_dsp_stub.c  syn_hal_npu_stub.c
src/postprocess/: syn_postprocess_classify.c  syn_postprocess_detect.c
src/preprocess/: syn_preprocess_audio.c  syn_preprocess_image.c  syn_preprocess_quant.c
tests/integration/: test_dual_core.c  test_npu_inference.c
tests/unit/: CMakeLists.txt  prj.conf  test_dsp_fft.c  test_dsp_hal.c  test_dsp_verify.c  test_infer_pipeline.c  test_init.c  test_ipc.c  test_mem.c  test_mem_bench.c  test_mem_regions.c  test_model_registry.c  test_npu_hal.c  test_process.c  test_scheduler.c  testcase.yaml
tests/unit_store/: CMakeLists.txt  prj.conf  test_model_ota.c  test_model_store.c  test_model_swap.c  testcase.yaml
tools/: syn_flash_layout.py  syn_model_pack.py  syn_ota_send.py  syn_profiler_viz.py
zephyr/: module.yml
